Entity classes of Exam database created, Exam Dao interface created

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,9 @@ dependencies {
     // glide
     implementation deps.glide
 
+    // gson
+    implementation deps.gson
+
     implementation deps.kotlin.ktx
     implementation deps.androidx.appcompat
     implementation deps.material
